--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles.css">
-    <title>Calculator</title>
+    <title>Web App</title>
 </head>
 <body>
     <div class="container">
@@ -18,14 +18,19 @@
                     <p>No. of Years</p>
                 </div>
                 <div class="input-2">
-                    <input type="number" id="principal" value="100"><br>
-                    <input type="range" id="rate" step="0.1" min="2" max="20" value="5"> <span id="interest"></span>%<br> 
+                    <input type="number" id="principal" value="" placeholder="100"><br>
+                    <input type="range" id="rate" step="0.1" min="1" max="20" value="5"> <span id="interest"></span>%<br> 
                     <select id="years" name="" form="">
                         <option value="1">1</option>
                         <option value="2">2</option>
                         <option value="3">3</option>
                         <option value="4">4</option>
                         <option value="5">5</option>
+                        <option value="6">6</option>
+                        <option value="7">7</option>
+                        <option value="8">8</option>
+                        <option value="9">9</option>
+                        <option value="10">10</option>
                     </select>
                 </div>
             </section>
