--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     <p>No. of Years</p>
                 </div>
                 <div class="input-2">
-                    <input type="number" id="principal" value="" placeholder="100"><br>
+                    <input type="number" id="principal" value=""><br>
                     <input type="range" id="rate" step="0.1" min="1" max="20" value="5"> <span id="interest"></span>%<br> 
                     <select id="years" name="" form="">
                         <option value="1">1</option>
